--- a/web/locales/de.json
+++ b/web/locales/de.json
@@ -1,41 +1,41 @@
 {
-	"Blockchain for Insurance": "Blockchain für Versicherungen",
-	"Home": "Start",
-	"Customer Login": "Kundenlogin",
-	"Shop": "Shop",
-	"Shop Description": "Ab zum Online-Shop!",
-	"Police": "Polizei",
-	"Claim Self-Service": "Schadensmeldung",
-	"Claim Self-Service Description": "Hier können Sie Ihre Schadensmeldungen anschauen und bearbeiten.",
-	"Repair Service": "Werkstatt",
-	"Repair Service Description": "Anstehende Reparaturen anschauen und bearbeiten.",
-	"Insurance": "Versicherer",
-	"Bikes": "Fahrräder",
-	"Bikes Description": "Hier können Sie Fahrräder bestellen.",
-	"Smart Phones": "Handys",
-	"Smart Phones Description": "Hier können Sie Handys bestellen.",
-	"Skis": "Skis",
-	"Skis Description": "Hier können Sie Ski bestellen.",
-	"Go To The Shop": "Zum Shop",
-	"Go To The Police": "Zum Polizei",
-	"Go To The Repair Service": "Zum Werkstatt",
-	"Go To The Insurance": "Zum Versicherer",
-	"Go To The Bike Shop": "Zum Fahrradshop",
-	"Go To The Smart Phone Shop": "Zum Handyshop",
-	"Go To The Ski Shop": "Zum Skishop",
-	"Insurance Self-Service": "Schadensmeldung",
-	"Claim Processing": "Schadensbearbeitung",
-	"Claim Processing Description": "Status von Schadensmeldungen verwalten",
-	"Process New Claims": "Neue Schadensmeldungen bearbeiten",
-	"Contract Management": "Vertragsmanagement",
-	"Contract Management Description": "Vorhandene Vertragsvorlagen für die Shops ansehen und bearbeiten",
-	"Manage Available Contract Templates": "Vertragsvorlagen verwalten",
-	"Go To The Claim Self-Service": "Zur Schadensmeldung",
-	"Go To The Contract Management": "Zum Vertragsmanagement",
-  "Go To The Claim Processing": "Zur Schadensbearbeitung",
-  "Repair Shop": "Werkstatt",
-	"Go To The Repair Shop": "Zur Werkstatt",
-	"Go To The Shop Peer": "Go To The Shop Peer",
-	"Go To The Police Peer": "Go To The Police Peer",
-	"Go To The Repair Shop Peer": "Go To The Repair Shop Peer"
+	"Blockchain for Insurance": "区块链保险解决方案",
+	"Home": "首页",
+	"Customer Login": "客户 登录",
+	"Shop": "商铺",
+	"Shop Description": "商铺描述",
+	"Police": "监管",
+	"Claim Self-Service": "自助索赔服务",
+	"Claim Self-Service Description": "自助索赔服务描述.",
+	"Repair Service": "维修服务",
+	"Repair Service Description": "维修服务描述.",
+	"Insurance": "保险",
+	"Bikes": "自行车",
+	"Bikes Description": "自行车描述.",
+	"Smart Phones": "智能手机",
+	"Smart Phones Description": "智能手机描述.",
+	"Skis": "滑雪板",
+	"Skis Description": "滑雪板描述.",
+	"Go To The Shop": "去商铺",
+	"Go To The Police": "去监管",
+	"Go To The Repair Service": "去自助索赔服务",
+	"Go To The Insurance": "投保",
+	"Go To The Bike Shop": "购买自行车",
+	"Go To The Smart Phone Shop": "购买手机",
+	"Go To The Ski Shop": "购买滑雪板",
+	"Insurance Self-Service": "保险自助服务",
+	"Claim Processing": "索赔处理",
+	"Claim Processing Description": "索赔处理描述",
+	"Process New Claims": "处理新索赔",
+	"Contract Management": "合同管理",
+	"Contract Management Description": "合同管理的描述",
+	"Manage Available Contract Templates": "管理可用的合同模板",
+	"Go To The Claim Self-Service": "自助索赔服务",
+	"Go To The Contract Management": "合同的管理",
+  	"Go To The Claim Processing": "进入索赔处理流程",
+  	"Repair Shop": "修理店",
+	"Go To The Repair Shop": "去修理店",
+	"Go To The Shop Peer": "去商店",
+	"Go To The Police Peer": "去监管节点",
+	"Go To The Repair Shop Peer": "去修理店"
 }
