--- a/web/src/insurance/locales/de.json
+++ b/web/src/insurance/locales/de.json
@@ -1,63 +1,63 @@
 {
-  "Loading contract types...": "Vertragsvorlagen werden geladen...",
-  "Insurance": "Versicherer",
-  "Unprocessed Claims": "Neue Schadensmeldungen",
-  "No outstanding claims.": "Keine ausstehenden Schadensmeldungen.",
-  "Contract Templates": "Vertragsvorlagen",
-  "Create Contract Template": "Neue Vertragsvorlage erstellen",
-  "Status": "Status",
-  "Activate": "Freigeben",
-  "Deactivate": "Deaktivieren",
-  "Availability to Merchants": "Verfügbarkeit",
-  "Description": "Beschreibung",
-  "Theft Insured": "Diebstahlschutz",
-  "Min. Duration (days)": "Min. Vertragsdauer (Tage)",
-  "Max. Duration (days)": "Max. Vertragsdauer (Tage)",
-  "Phone Shops": "Handy-Shops",
-  "Bike Shops": "Fahrrad-Shops",
-  "Ski Shops": "Ski-Shops",
-  "Present": "Vorhanden",
-  "Not Included": "Nicht verfügbar",
-  "Creation Date": "Erstellungsdatum",
-  "Theft Involved": "Ist Diebstahl",
-  "Reimbursable": "Erstattungsbetrag",
-  "Repair": "Reparatur anstoßen",
-  "Reimburse": "Auszahlung veranlassen",
-  "Reject": "Ablehnen",
-  "Loading Claims...": "Schadensmeldungen werden geladen...",
-  "New Contract Template": "Neue Vertragsvorlage",
-  "Formula Per Day": "Preisbildung Formel",
-  "Max. Sum Insured": "Maximale Deckungssumme",
-  "Terms and Conditions": "Vertragskonditionen",
-  "Create": "Erstellen",
-  "Claim Self-Service": "Schadensmeldung",
-  "Customer Login": "Kundenlogin",
-  "Username": "Benutzername",
-  "Password": "Passwort",
-  "Signing In...": "Einloggen...",
-  "Login": "Anmelden",
-  "Invalid login. Please try again.": "Ungültige Anmeldedaten. Bitten versuchen Sie es erneut.",
-  "Loading Contracts...": "Verträge werden geladen...",
-  "Your Contracts": "Abgeschlossene Verträge",
-  "File a Claim": "Schaden melden",
-  "Valid From": "Gültig Von",
-  "Valid To": "Gültig Bis",
-  "Submit": "Abschicken",
-  "Theft": "Diebstahl",
-  "currency code": "EUR",
-  "Brand": "Marke",
-  "Model": "Modell",
-  "Serial No.": "Seriennr.",
-  "File a New Claim": "Neue Schadensmeldung",
-  "View Claims": "Schadensmeldungen anzeigen",
-  "Claims to Selected Contract": "Schadensmeldungen zum Vertrag",
-  "Being Processed": "In Bearbeitung",
-  "Repaired": "Wurde repariert",
-  "To be repaired": "Wird repariert",
-  "Rejected": "Abgelehnt",
-  "Unknown": "Nicht bekannt",
-  "Expecting confirmation from police": "Diebstahl wird von den Polizei geprüft",
-  "Theft confirmed by police": "Diebstahl bestätigt",
-  "You haven't filed any claims yet.": "Sie haben noch keine Schäden gemeldet.",
-  "File Reference": "Aktenzeichen"
+  "Loading contract types...": "加载合约类型...",
+  "Insurance": "保险",
+  "Unprocessed Claims": "未经处理的索赔",
+  "No outstanding claims.": "没有未决索赔.",
+  "Contract Templates": "合同模板",
+  "Create Contract Template": "创建合同模板",
+  "Status": "状态",
+  "Activate": "激活",
+  "Deactivate": "停用",
+  "Availability to Merchants": "对商人的可用性",
+  "Description": "描述",
+  "Theft Insured": "盗窃保险",
+  "Min. Duration (days)": "最少持续时间（天）",
+  "Max. Duration (days)": "最多持续时间（天）",
+  "Phone Shops": "手机店",
+  "Bike Shops": "自行车商店",
+  "Ski Shops": "滑雪商店",
+  "Present": "现在",
+  "Not Included": "不包括在内",
+  "Creation Date": "创建日期",
+  "Theft Involved": "涉及窃取",
+  "Reimbursable": "可偿还的",
+  "Repair": "修理",
+  "Reimburse": "报销",
+  "Reject": "拒绝",
+  "Loading Claims...": "加载索赔信息...",
+  "New Contract Template": "新合约模板",
+  "Formula Per Day": "Formula Per Day",
+  "Max. Sum Insured": "最大保险金额",
+  "Terms and Conditions": "条款和条件",
+  "Create": "创建",
+  "Claim Self-Service": "索赔自助服务",
+  "Customer Login": "客户登录",
+  "Username": "用户名",
+  "Password": "密码",
+  "Signing In...": "登入...",
+  "Login": "登录",
+  "Invalid login. Please try again.": "无效登录。请再试一次。.",
+  "Loading Contracts...": "加载合同...",
+  "Your Contracts": "您的合同",
+  "File a Claim": "提出索赔",
+  "Valid From": "从",
+  "Valid To": "到",
+  "Submit": "提交",
+  "Theft": "窃取",
+  "currency code": "RMB",
+  "Brand": "品牌",
+  "Model": "型号",
+  "Serial No.": "序列号",
+  "File a New Claim": "申请新的索赔",
+  "View Claims": "查看索赔",
+  "Claims to Selected Contract": "选择索赔的合同",
+  "Being Processed": "被处理的",
+  "Repaired": "已修复的",
+  "To be repaired": "将要修复的",
+  "Rejected": "拒绝的",
+  "Unknown": "未知的",
+  "Expecting confirmation from police": "等待监管确认",
+  "Theft confirmed by police": "鉴权证实有窃取行为",
+  "You haven't filed any claims yet.": "你还没有提出任何索赔.",
+  "File Reference": "文件引用"
 }
