--- a/web/src/shop/locales/de.json
+++ b/web/src/shop/locales/de.json
@@ -1,41 +1,41 @@
 {
-  "Bike Shop": "Fahrradshop",
-  "Smart Phone Shop": "Handyshop",
-  "Ski Shop": "Skishop",
-  "Buy a Bike": "Fahrrad kaufen",
-  "Buy a Smart Phone": "Handy kaufen",
-  "Buy a Pair of Skis": "Ski kaufen",
-  "Choose a Product": "Produkt wählen",
-  "Product Brand": "Produktmarke",
-  "Product Model": "Produktmodel",
-  "Price": "Preis",
-  "Serial No.": "Seriennr.",
-  "Buy Insurance for the Bike": "Versicherung für das Fahrrad kaufen",
-  "Buy Insurance for the Smart Phone": "Versicherung für das Handy kaufen",
-  "Buy Insurnace for the Pair of Skis": "Versicherung für die Ski kaufen",
-  "currency code": "EUR",
-  "Next": "Weiter",
-  "Previous": "Zurück",
-  "Contract": "Vertrag",
-  "Daily Price": "Preis pro Tag",
-  "Contract Terms": "Vertragskonditionen",
-  "First Name": "Vorname",
-  "Last Name": "Nachname",
-  "E-mail Address": "Email-Adresse",
-  "Start Date": "Anfangsdatum",
-  "End Date": "Enddatum",
-  "Loading Contracts...": "Lade Verträge...",
-  "Page Not Found!": "Seite nicht gefunden!",
-  "Payment": "Zahlungsvorgang",
-  "Product": "Produkt",
-  "Services": "Dienstleistungen",
-  "Theft Protection": "Diebstahlschutz",
-  "Total": "Summe",
-  "Order": "Bestellen",
-  "Insurance": "Versicherung",
-  "Processing Transaction...": "Transaktion bearbeiten...",
-  "Transaction completed.": "Transaktion abgeschlossen.",
-  "Username": "Benutzername",
-  "Password": "Passwort",
-  "Summary": "Überblick"
+  "Bike Shop": "自行车店",
+  "Smart Phone Shop": "智能手机商店",
+  "Ski Shop": "滑雪用品商店",
+  "Buy a Bike": "购买自行车",
+  "Buy a Smart Phone": "购买智能手机",
+  "Buy a Pair of Skis": "购买滑雪用品",
+  "Choose a Product": "选择产品",
+  "Product Brand": "产品品牌",
+  "Product Model": "产品模型",
+  "Price": "价格",
+  "Serial No.": "序列号",
+  "Buy Insurance for the Bike": "购买自行车保险",
+  "Buy Insurance for the Smart Phone": "购买智能手机保险",
+  "Buy Insurnace for the Pair of Skis": "购买滑雪用品保险",
+  "currency code": "RMB",
+  "Next": "下一页",
+  "Previous": "上一页",
+  "Contract": "合同",
+  "Daily Price": "每日价格",
+  "Contract Terms": "合同条款",
+  "First Name": "名",
+  "Last Name": "姓",
+  "E-mail Address": "电子邮件地址",
+  "Start Date": "开始时间",
+  "End Date": "结束时间",
+  "Loading Contracts...": "加载合约...",
+  "Page Not Found!": "页面未找到!",
+  "Payment": "付款",
+  "Product": "产品",
+  "Services": "服务",
+  "Theft Protection": "防窃取",
+  "Total": "总计",
+  "Order": "订单",
+  "Insurance": "保险",
+  "Processing Transaction...": "处理事务...",
+  "Transaction completed.": "事务完成.",
+  "Username": "用户名",
+  "Password": "密码",
+  "Summary": "总结"
 }
